update project ui

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <ul class="tag-list">
             <li>DevOps Engineer Intern @ Telkom Indonesia</li>
             <li>IoT Programmer Intern @ Vascomm</li>
-            <li>Server Monitoring @ Jagoan Hosting (Beon)</li>
+            <li>Teaching Factory @ Jagoan Hosting (Beon)</li>
             <li>APERTI BUMN Scholarship Awardee</li>
             <li>Multiple national competition awards</li>
           </ul>
@@ -206,7 +206,7 @@
             <h3>LinkedIn</h3>
             <p>
               <a href="https://www.linkedin.com/in/nathanael-tjahyadi/" target="_blank" rel="noopener noreferrer">
-                linkedin.com/in/nathanael-tjahyadi
+                LinkedIn
               </a>
             </p>
           </div>
