--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
   </head>
   <body>
+    <!-- Decap CMS akan otomatis membaca admin/config.yml dan
+         memakai backend GitHub + Cloudflare Worker yang sudah kamu set -->
     <script src="https://unpkg.com/decap-cms@^3.1.2/dist/decap-cms.js"></script>
   </body>
 </html>
