--- a/index.html
+++ b/index.html
@@ -26,31 +26,41 @@
 </head>
 <body>
   <!-- Header / Nav -->
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="logo">
-        <a href="#top">Nathan</a>
-      </div>
-      <nav class="nav">
-        <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
-          ☰
-        </button>
-        <ul class="nav-list" id="navList">
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#research">Research</a></li>
-          <li><a href="#experience">Experience</a></li>
-          <li><a href="#education">Education</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <button class="theme-toggle" id="themeToggle" type="button" aria-label="Switch theme">
-          <span id="themeToggleIcon">D</span>
-          <span id="themeToggleText">Dark</span>
-        </button>
-      </nav>
+<header class="site-header">
+  <div class="container header-inner">
+    <div class="logo">
+      <a href="#top">Nathan</a>
     </div>
-  </header>
+
+    <nav class="nav">
+      <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
+        ☰
+      </button>
+      <ul class="nav-list" id="navList">
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#research">Research</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- NEW: theme toggle -->
+    <button
+      id="themeToggle"
+      class="theme-toggle"
+      type="button"
+      aria-label="Toggle dark mode"
+    >
+      <span class="theme-toggle-icon theme-toggle-icon--sun">☀</span>
+      <span class="theme-toggle-icon theme-toggle-icon--moon">🌙</span>
+      <span class="theme-toggle-thumb"></span>
+    </button>
+  </div>
+</header>
+
 
   <main id="top">
     <!-- Hero -->
