update dark mode slider

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <div class="logo">
       <a href="#top">Nathan</a>
     </div>
-
     <nav class="nav">
       <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
         ☰
@@ -45,21 +44,24 @@
         <li><a href="#education">Education</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-    </nav>
 
-    <!-- NEW: theme toggle -->
-    <button
-      id="themeToggle"
-      class="theme-toggle"
-      type="button"
-      aria-label="Toggle dark mode"
-    >
-      <span class="theme-toggle-icon theme-toggle-icon--sun">☀</span>
-      <span class="theme-toggle-icon theme-toggle-icon--moon">🌙</span>
-      <span class="theme-toggle-thumb"></span>
-    </button>
+      <!-- SLIDER THEME TOGGLE -->
+      <button
+        id="themeToggle"
+        class="theme-toggle"
+        type="button"
+        aria-label="Toggle color theme"
+      >
+        <span class="theme-toggle-track">
+          <span class="theme-toggle-thumb"></span>
+          <span class="theme-toggle-icon theme-toggle-icon--moon">☾</span>
+          <span class="theme-toggle-icon theme-toggle-icon--sun">☼</span>
+        </span>
+      </button>
+    </nav>
   </div>
 </header>
+
 
 
   <main id="top">
