--- a/index.html
+++ b/index.html
@@ -132,13 +132,15 @@
         <h2>Skills</h2>
         <div class="grid-3">
           <div class="card">
-            <h3>Cloud & DevOps</h3>
+            <h3>Cloud, DevOps & Monitoring</h3>
             <ul>
               <li>AWS, Azure</li>
               <li>Docker, Kubernetes</li>
-              <li>Bitbucket Pipelines, CI/CD</li>
-              <li>DevSecOps practices</li>
-              <li>Linux server administration</li>
+              <li>Bitbucket Pipelines & CI/CD automation</li>
+              <li>DevSecOps practices & Linux server administration</li>
+              <li>Grafana, Prometheus, Datadog, Alerta</li>
+              <li>Networking fundamentals</li>
+              <li>Python, Bash, Git, VS Code</li>
             </ul>
           </div>
           <div class="card">
@@ -151,12 +153,11 @@
             </ul>
           </div>
           <div class="card">
-            <h3>Monitoring & Tooling</h3>
+            <h3>Creative Works</h3>
             <ul>
-              <li>Grafana, Prometheus, Datadog, Alerta</li>
-              <li>Networking fundamentals</li>
-              <li>Python, Bash</li>
-              <li>Git, VS Code</li>
+              <li>UI/UX using Figma (wireframes, prototypes, design systems)</li>
+              <li>Premiere Pro & After Effects for motion / video edits</li>
+              <li>Design & branding concepts across digital assets</li>
             </ul>
           </div>
         </div>
@@ -269,6 +270,17 @@
           <p id="projectModalSummary"></p>
           <p id="projectModalDetails"></p>
           <ul id="projectModalBullets" class="card-list"></ul>
+          <div id="projectModalActions" class="modal-actions">
+            <a
+              id="projectModalFigma"
+              class="btn primary-btn"
+              href="#"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              View Figma Case Study
+            </a>
+          </div>
         </div>
       </div>
     </div>
