--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <li><a href="#research">Research</a></li>
         <li><a href="#experience">Experience</a></li>
         <li><a href="#education">Education</a></li>
+        <li><a href="#honors">Honors</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
 
@@ -199,6 +200,19 @@
       <div class="container">
         <h2>Education</h2>
         <div id="educationTimeline" class="timeline">
+          <!-- Filled by JS -->
+        </div>
+      </div>
+    </section>
+
+    <!-- Honors -->
+    <section id="honors" class="section">
+      <div class="container">
+        <div class="section-header">
+          <h2>Honors & Achievements</h2>
+          <p>Competitions, scholarships, and awards I received during school and university.</p>
+        </div>
+        <div id="honorsGrid" class="honors-grid">
           <!-- Filled by JS -->
         </div>
       </div>
