update honors page

--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
         <div id="honorsGrid" class="honors-grid">
           <!-- Filled by JS -->
         </div>
+        <div style="text-align: center; margin-top: 2rem;">
+          <a href="honors.html" class="btn primary-btn">See More Honors</a>
+        </div>
       </div>
     </section>
 
