--- a/index.html
+++ b/index.html
@@ -324,6 +324,9 @@
             <a id="projectModalFigma" class="btn primary-btn" href="#" target="_blank" rel="noopener noreferrer">
               View Figma Case Study
             </a>
+            <a id="projectModalSite" class="btn primary-btn" href="#" target="_blank" rel="noopener noreferrer">
+              Visit Website
+            </a>
           </div>
         </div>
       </div>
