--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   <meta name="color-scheme" content="light dark" />
   <link rel="canonical" href="https://itsnathan.id/" />
   <meta property="og:title" content="Nathanael Tjahyadi | Portfolio" />
-  <meta property="og:description" content="Portfolio of Nathanael Tjahyadi, IoT, Edge Computing, and DevOps Engineer." />
+  <meta property="og:description"
+    content="Portfolio of Nathanael Tjahyadi, IoT, Edge Computing, and DevOps Engineer." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://itsnathan.id/" />
   <meta property="og:site_name" content="Nathanael Tjahyadi" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="Nathanael Tjahyadi | Portfolio" />
-  <meta name="twitter:description" content="Portfolio of Nathanael Tjahyadi, IoT, Edge Computing, and DevOps Engineer." />
+  <meta name="twitter:description"
+    content="Portfolio of Nathanael Tjahyadi, IoT, Edge Computing, and DevOps Engineer." />
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
