--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Nathanael Tjahyadi" />
   <meta name="robots" content="index, follow" />
   <meta name="color-scheme" content="light dark" />
+  <link rel="icon" href="content/logo.png" type="image/png" />
   <link rel="canonical" href="https://itsnathan.id/" />
   <meta property="og:title" content="Nathanael Tjahyadi | Portfolio" />
   <meta property="og:description"
