--- a/honors.html
+++ b/honors.html
@@ -23,6 +23,7 @@
             }
         })();
     </script>
+    <link rel="icon" href="content/logo.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
     <style>
         .honors-page-header {
