--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,7 @@
             }
         })();
     </script>
+    <link rel="icon" href="content/logo.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
     <style>
         /* Inline adjustment for projects page spacing if needed */
