--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Nathanael Tjahyadi" />
   <meta name="robots" content="index, follow" />
   <meta name="color-scheme" content="light dark" />
-  <link rel="icon" href="content/logo.png" type="image/png" />
+  <link rel="icon" href="https://itsnathan.id/favicon.png" type="image/png" />
   <link rel="canonical" href="https://itsnathan.id/" />
   <meta property="og:title" content="Nathanael Tjahyadi | Portfolio" />
   <meta property="og:description"
@@ -293,7 +293,8 @@
   <!-- Footer -->
   <footer class="site-footer">
     <div class="container footer-inner">
-      <span>© <span id="year"></span> Nathanael Tjahyadi</span>
+      <span>© <span id="year"></span> Nathanael Tjahyadi · <a href="https://github.com/Nathanael1721/" target="_blank"
+          rel="noopener noreferrer">GitHub</a></span>
       <span>Built with HTML, CSS, and vanilla JS</span>
     </div>
   </footer>
