--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
             }
         })();
     </script>
-    <link rel="icon" href="content/logo.png" type="image/png" />
+    <link rel="icon" href="https://itsnathan.id/favicon.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
     <style>
         /* Inline adjustment for projects page spacing if needed */
@@ -105,7 +105,8 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-inner">
-            <span>© <span id="year"></span> Nathanael Tjahyadi</span>
+            <span>© <span id="year"></span> Nathanael Tjahyadi · <a href="https://github.com/Nathanael1721/"
+                    target="_blank" rel="noopener noreferrer">GitHub</a></span>
             <span>Built with HTML, CSS, and vanilla JS</span>
         </div>
     </footer>
