--- a/honors.html
+++ b/honors.html
@@ -23,7 +23,7 @@
             }
         })();
     </script>
-    <link rel="icon" href="content/logo.png" type="image/png" />
+    <link rel="icon" href="https://itsnathan.id/favicon.png" type="image/png" />
     <link rel="stylesheet" href="css/style.css" />
     <style>
         .honors-page-header {
@@ -100,7 +100,8 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-inner">
-            <span>© <span id="year"></span> Nathanael Tjahyadi</span>
+            <span>© <span id="year"></span> Nathanael Tjahyadi · <a href="https://github.com/Nathanael1721/"
+                    target="_blank" rel="noopener noreferrer">GitHub</a></span>
             <span>Built with HTML, CSS, and vanilla JS</span>
         </div>
     </footer>
